--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
     "hardhat": "^2.10.1",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.4"
   }
 }
